<resources>
    <string name="app_name">Wallet App</string>
    <string name="nfc_service_description">Host Card Emulator Service</string>
    <string name="nfc_aid_description">DCC AID</string>

    <string name="retry">Retry</string>
    <string name="biometric_dialog_title">Biometric login</string>
    <string name="biometric_dialog_subtitle">Log in using your biometric credential</string>
    <string name="biometric_dialog_cancel">Cancel</string>
    <string name="certificate_wallet">Certificate Wallet</string>
    <string name="no_certificate_available">No Certificate available</string>
    <string name="click_span_code_to_add_to_your_wallet">Click Scan Code to add to your Wallet.</string>
    <string name="scan_import">Scan / Import</string>
    <string name="check_validity">Check Validity</string>
    <string name="i_agree_check_validity">I agree, check validity</string>
    <string name="vaccination_of">Vaccination %1$s of %2$s</string>
    <string name="vaccination">Vaccination</string>
    <string name="vaccination_certificate">vaccination certificate %1$s of %2$s</string>
    <string name="recovery">Recovery</string>
    <string name="recovery_certificate">recovery certificate</string>
    <string name="test">Test</string>
    <string name="test_certificate">test certificate</string>
    <string name="your_certificate">Your Certificate</string>
    <string name="name">Name</string>
    <string name="name_with_semi_colons">Name:</string>
    <string name="country_rules_validation">Country rules validation</string>
    <string name="check_country_rules_conformance_of_your_certificate">Check country rules conformance of your certificate</string>

    <string name="qr_reader_title">Step1: Scan Code</string>
    <string name="step_1">Step1</string>
    <string name="step_2">Step2</string>
    <string name="step_3">Step3</string>
    <string name="claim_cert_title">Step2: Your Data</string>
    <string name="tan_cert_title">Step3: TAN</string>
    <string name="tan_code">TAN Code</string>
    <string name="tan_code_subtitle">Please provide the TAN Code associated to this certificate. This was sent to you via email or similar.</string>
    <string name="tan_hint">TAN Code</string>
    <string name="save">Save</string>
    <string name="settings">Settings</string>
    <string name="privacy_information">Privacy information</string>
    <string name="licenses">Licenses</string>
    <string name="version">Version: %1$s (%2$d).</string>
    <string name="about">About</string>
    <string name="settings_version_title">Wallet App</string>
    <string name="next">Next</string>

    <!--    <string name="date_of_birth_title">Date of Birth</string>-->
    <string name="date_of_vaccination_title">Date of Vaccination</string>
    <string name="issuer_country">Issuer Country</string>
    <string name="country_of_test">Country of Test</string>
    <string name="target_disease">Target Disease</string>
    <string name="date_of_test">Date of Test</string>
    <string name="date_of_test_result_title">Date of Test Result</string>
    <string name="type_of_test_title">Type of Test</string>
    <string name="test_result_title">Test Result</string>
    <string name="certificate_valid_from_to_title">Certificate Valid From - To</string>
    <string name="first_positive_test_result">First Positive Test Result</string>
    <string name="tan_placeholder">Tan: %1$s</string>
    <string name="tan_empty_error">TAN cannot be empty</string>
    <string name="delete">Delete</string>
    <string name="disclaimer_message">This check gives an indication on eligibility to travel based on your certificate. Restriction of free movement in response to the coronavirus pandemic are subject to change and might be based on additional information not available to and within this application. Please refer to authoritative national sources for more information and the Re-open EU website: https://reopen.europa.eu/. Your data is being processed locally on this device.</string>
    <string name="your_destination_country">Your destination country</string>
    <string name="check_the_date">Check the date</string>
    <string name="disclaimer">Disclaimer</string>
    <string name="country_code_list_is_empty">Country codes list is empty</string>

    <string name="result">Result</string>
    <string name="current">Current</string>
    <string name="passed">Passed</string>
    <string name="failed">Failed</string>
    <string name="open">Open</string>
    <string name="rule">Rule</string>
    <string name="passed_for">Passed for %1$s (see settings)</string>
    <string name="open_for">Open for %1$s (see settings)</string>
    <string name="failed_for">Failed for %1$s (see settings)</string>
    <string name="valid_certificate_title">Valid certificate</string>
    <string name="invalid_certificate_title">Invalid certificate</string>
    <string name="certificate_has_limitation_title">Certificate has limitation</string>
    <string name="valid_certificate_message">Your certificate is valid and confirms to the provided country rules. Additional entry requirements might apply, please refer to the Re-open EU website: https://reopen.europa.eu/</string>
    <string name="invalid_certificate_message">Your certificate is not valid. Please refer to the Re-open EU website: https://reopen.europa.eu/</string>
    <string name="certificate_has_limitation_message">Your certificate is valid but has the following restrictions:</string>
    <string name="please_note_that_this_informaiont_is_without_guaranty">This check gives an indication on eligibility to travel based on your certificate. Restriction of free movement in response to the coronavirus pandemic are subject to change and might be based on additional information not available to and within this application.</string>
    <string name="certificate_type">Certificate Type</string>
    <string name="certificate_issuer">Certificate Issuer</string>
    <string name="manufacturer">Manufacturer</string>
    <string name="vaccine_of_prophylaxis">Vaccine or Prophylaxis</string>
    <string name="check_the_tan_and_try_again">Check the TAN and try again</string>
    <string name="share_image">Share Image</string>
    <string name="share_pdf">Share PDF</string>
    <string name="share">Share</string>
    <string name="file_preparation_error">File preparation failed</string>
    <string name="scan_qr_code">Scan QR code</string>
    <string name="import_image">Import image</string>
    <string name="import_pdf">Import PDF</string>
    <string name="take_photo">Take Photo</string>
    <string name="pick_from_gallery">Pick From Gallery</string>
    <string name="certificates">Certificates</string>
    <string name="images">Images</string>
    <string name="pdfs">PDFs</string>
    <string name="pick_image">Pick Image</string>
    <string name="error_importing_file">Error importing file</string>
    <string name="your_file">Your File</string>

    <string name="nfc_turn_on_title">NFC is turned off.</string>
    <string name="nfc_turn_on_message">You need turn on NFC module for scanning. Wish turn on it now?</string>
    <string name="nfc_turn_on_positive">Turn on</string>
    <string name="nfc_turn_on_negative">Dismiss</string>
    <string name="nfc_status_ok">Allow data exchange when your phone is close to another device (5cm or closer)</string>
    <string name="nfc_on">NFC on</string>
    <string name="nfc_off">NFC off</string>
    <string name="complete_action_using">Complete action using</string>
    <string name="validate_or_add_to_your_wallet_app">Validate or add to your wallet app</string>
    <string name="cancel">Cancel</string>
    <string name="certificate_claimed">Certificate claimed</string>
    <string name="date_of_birth">Date of Birth:</string>
    <string name="departure">Departure:</string>
    <string name="arrival">Arrival:</string>
    <string name="category">Category:</string>
    <string name="accepted_certificate_type">Accepted Certificate Type:</string>
    <string name="validation_time">Validation Time:</string>
    <string name="valid_from">Valid From:</string>
    <string name="valid_to">Valid To:</string>

    <string name="do_you_want_to_delete_this_file">Do you want to delete this file?</string>
    <string name="do_you_want_to_delete_this_certificate">Do you want to delete this certificate?</string>
    <string name="date">Date</string>
    <string name="from">From</string>
    <string name="revoked">Revoked</string>
    <string name="certificate_has_been_revoked">Your Certificate was revoked. You will no longer be able to use it</string>
    <string name="update_revocation_state">Update revocation state</string>
    <string name="last_successfully_updated_at">Last successfully updated at %s</string>
    <string name="last_update_failed">Last update failed</string>
    <string name="wasnt_updated_yet">Wasn\'t updated yet</string>
    <string name="qr_code_from">QR Code from %1$s</string>
    <string name="subject">Subject</string>
    <string name="service_provider">Service provider</string>
    <string name="consent">Consent</string>
    <string name="deny">Deny</string>
    <string name="allow">Allow</string>
    <string name="valid_until">Valid until %1$s</string>
    <string name="certificates_found_title">%1$s certificates found for %2$s</string>
    <plurals name="certificates_found_title">
        <item quantity="one">%1$s certificate found for %2$s</item>
        <item quantity="other">%1$s certificates found for %2$s</item>
    </plurals>
    <string name="validation_services_found_title">%1$s validation services found</string>
    <string name="do_you_agree_to_share_certificate">Do you agree to share the %1$s with Airline.com?</string>
    <string name="grant_permission">Grant Permission</string>
    <string name="ok">Ok</string>
    <string name="cert_transfer_failed">Failed to transfer certificate</string>
    <string name="something_went_wrong">Something went wrong</string>
    <string name="no_expiration_date">No expiration date</string>
    <string name="validation_result">Validation Result</string>
    <string name="identifier">Identifier</string>
    <string name="type">Type</string>
    <string name="details">Details</string>
</resources>
