<?xml version="1.0" encoding="utf-8"?><!--
  ~  license-start
  ~  eu-digital-green-certificates / dgca-wallet-app-android
  ~
  ~  Copyright (C) 2021 T-Systems International GmbH and all other contributors
  ~
  ~  Licensed under the Apache License, Version 2.0 (the "License");
  ~  you may not use this file except in compliance with the License.
  ~  You may obtain a copy of the License at
  ~
  ~       http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~  Unless required by applicable law or agreed to in writing, software
  ~  distributed under the License is distributed on an "AS IS" BASIS,
  ~  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~  See the License for the specific language governing permissions and
  ~  limitations under the License.
  ~  license-end
  ~
  ~  Created by osarapulov on 8/20/21 2:27 PM
  -->

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingVertical="@dimen/default_padding"
    tools:background="@color/white">

    <TextView
        android:id="@+id/title"
        style="@style/BottomDialogTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:paddingHorizontal="@dimen/default_padding"
        android:text="@string/validate_or_add_to_your_wallet_app"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/scanCertificate"
        style="@style/BottomDialogButton"
        android:layout_marginTop="@dimen/default_margin"
        android:drawablePadding="@dimen/default_padding"
        android:gravity="center_vertical"
        android:minHeight="48dp"
        android:paddingHorizontal="@dimen/default_padding"
        android:text="@string/scan_qr_code"
        app:drawableStartCompat="@drawable/ic_scan"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title" />

    <TextView
        android:id="@+id/scanNfcCode"
        style="@style/BottomDialogButton"
        android:drawablePadding="@dimen/default_padding"
        android:gravity="center_vertical"
        android:minHeight="48dp"
        android:paddingHorizontal="@dimen/default_padding"
        android:text="@string/scan_nfc_code"
        app:drawableStartCompat="@drawable/ic_nfc"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/scanCertificate" />

    <TextView
        android:id="@+id/importImage"
        style="@style/BottomDialogButton"
        android:drawablePadding="@dimen/default_padding"
        android:gravity="center_vertical"
        android:minHeight="48dp"
        android:text="@string/import_image"
        app:drawableStartCompat="@drawable/ic_import_image"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/scanNfcCode" />

    <TextView
        android:id="@+id/importPdf"
        style="@style/BottomDialogButton"
        android:drawablePadding="@dimen/default_padding"
        android:gravity="center_vertical"
        android:minHeight="48dp"
        android:text="@string/import_pdf"
        app:drawableStartCompat="@drawable/ic_import_pdf"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/importImage" />

</androidx.constraintlayout.widget.ConstraintLayout>