<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:minWidth="300dp"
    android:padding="@dimen/default_margin">

    <TextView
        android:id="@+id/title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/default_margin"
        android:gravity="start"
        android:text="@string/do_you_want_to_delete_this_certificate"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@id/typeTitle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/typeTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/default_double_margin"
        android:layout_marginEnd="@dimen/default_half_margin"
        android:ellipsize="end"
        android:maxLines="2"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintEnd_toStartOf="@id/titlesGuideline"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title"
        tools:text="Vaccination" />

    <TextView
        android:id="@+id/typeValue"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/default_double_margin"
        android:layout_marginStart="@dimen/default_half_margin"
        android:ellipsize="end"
        android:maxLines="2"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintStart_toEndOf="@id/titlesGuideline"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title"
        tools:text="1/2" />

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/typeBarrier"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="bottom"
        app:constraint_referenced_ids="typeTitle, typeValue" />

    <TextView
        android:id="@+id/dateTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/default_half_margin"
        android:layout_marginEnd="@dimen/default_half_margin"
        android:ellipsize="end"
        android:maxLines="2"
        android:text="@string/date"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintEnd_toStartOf="@id/titlesGuideline"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/typeBarrier" />

    <TextView
        android:id="@+id/dateValue"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/default_half_margin"
        android:layout_marginStart="@dimen/default_half_margin"
        android:ellipsize="end"
        android:maxLines="2"
        tools:text="2021-12-07"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintStart_toEndOf="@id/titlesGuideline"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/typeBarrier" />

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/dateBarrier"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="bottom"
        app:constraint_referenced_ids="dateTitle, dateValue" />

    <TextView
        android:id="@+id/fromTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/default_half_margin"
        android:layout_marginEnd="@dimen/default_half_margin"
        android:ellipsize="end"
        android:maxLines="2"
        android:text="@string/from"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintEnd_toStartOf="@id/titlesGuideline"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/dateBarrier" />

    <TextView
        android:id="@+id/fromValue"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/default_half_margin"
        android:layout_marginStart="@dimen/default_half_margin"
        android:ellipsize="end"
        android:maxLines="2"
        tools:text="Alexander Sarapulov"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintStart_toEndOf="@id/titlesGuideline"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/dateBarrier" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/titlesGuideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent=".35"
        app:layout_constraintTop_toBottomOf="@id/fromTitle" />

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/fromBarrier"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="bottom"
        app:constraint_referenced_ids="fromTitle, fromValue"
        app:layout_constraintTop_toBottomOf="@id/fromTitle" />

    <Button
        android:id="@+id/cancel"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/default_half_margin"
        android:layout_marginTop="@dimen/default_margin"
        android:text="@string/cancel"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/delete"
        app:layout_constraintTop_toBottomOf="@id/fromBarrier" />

    <Button
        android:id="@+id/delete"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/default_margin"
        android:layout_marginEnd="@dimen/default_half_margin"
        android:backgroundTint="@color/green"
        android:text="@string/delete"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/cancel"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/fromBarrier" />
</androidx.constraintlayout.widget.ConstraintLayout>